Remove dead workstealing.unresponsive.us flags from CacheStressBenchmark